# Personal_Assistant

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  chat.py  health.py  memory.py  tools.py  voice.py
backend/app/core/: __init__.py  chat_service.py  config.py  logging.py  model_manager.py  ollama_client.py  project_registry.py  safety.py  sessions.py
backend/app/memory/: __init__.py  embeddings.py  service.py  store.py  vector_store.py
backend/app/planner/: __init__.py  fast_intents.py  planner.py  schemas.py
backend/app/plugins/: README.md
backend/app/speech/: __init__.py  mic_demo.py  session.py  stt.py  wake_word.py
backend/app/tools/: __init__.py  _contacts.py  _location.py  base.py  briefing.py  github.py  mail.py  registry.py  reminders.py  whatsapp.py
backend/app/tools/browser/: __init__.py  browser.py
backend/app/tools/clipboard/: __init__.py  clipboard.py
backend/app/tools/finder/: __init__.py  finder.py
backend/app/tools/git/: __init__.py  git.py
backend/app/tools/system/: __init__.py  system.py
backend/app/tools/terminal/: __init__.py  (+1 more)
backend/app/tts/: __init__.py  engine.py  piper.py  say.py
backend/app/vision/: __init__.py  qwen_vl.py
backend/tests/: conftest.py  test_browser.py  test_fast_intents.py  test_github.py  test_memory.py  test_planner.py  test_project_registry.py  test_tools_briefing.py  test_tools_mail.py  test_tools_system.py  test_tools_whatsapp.py  test_voice_api.py  test_voice_integration.py  test_voice_session.py
(+24 files in other folders)
