[project]
name = "jarvis-backend"
version = "0.1.0"
description = "Local-first AI desktop assistant backend for macOS."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "ollama>=0.3",
    "chromadb>=0.5",
    "playwright>=1.47",
    "pyobjc-framework-Quartz>=10.3 ; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.3 ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.3 ; sys_platform == 'darwin'",
    "websockets>=13.1",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
